--- a/ActividadPagina.html
+++ b/ActividadPagina.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Colegio</title>
 </head>
+
 <body>
+    <img src="imagenc.png" style="position:absolute;top:0px;right:40px;" width="200" height="200">
+    <p style="font-family:verdana;font-size:200%;color:blue;">Bienvenidos</p>  
+    <a href="contacto.html">Home</a>
+    <a href="contacto.html">Estudiante</a>
+    <a href="contacto.html">Administrador</a>
+    <a href="contacto.html">Acerca de</a>
     
 </body>
 </html>
