Se agregaron las demas ventanas y se completaron los requerimientos de la actividad

--- a/Acercade.html
+++ b/Acercade.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colegio</title>
+    <title>Acerca</title>
 </head>
-
 <body>
     <img src="imagenc.png" style="position:absolute;top:0px;right:40px;" width="200" height="200">
-    <p style="font-family:verdana;font-size:200%;color:blue;">Bienvenidos</p>  
+    <p style="font-family:verdana;font-size:200%;color:rgb(17, 167, 80);">Información de Contacto</p> 
     <a href="ActividadPagina.html">Home</a>
     <a href="Estudiante.html">Estudiante</a>
     <a href="Administrador.html">Administrador</a>
-    <a href="Acercade.html">Acerca de</a>
+    <a href="Acercade.html">Acerca de</a><br><br>
 
-    <center><p style="font-family:cursive;font-size:400%;color:rgb(5, 5, 48);">CONOCERÉIS LA VERDAD Y LA VERDAD OS HARÁ LIBRES</p></center>
-    <p align="right" style="font-family:cursive;font-size:100%;color:rgb(5, 5, 48);">JUAN 8:32</p>
-    
+    <center><img src="Contacto.png" width="500" height="200"></center>
+    <center><p style="font-family:Verdana, Geneva, Tahoma, sans-serif;font-size:200%;color:rgb(145, 60, 11);">7760-4879 / 7760-4356</p></center>
+
 </body>
 </html>
