Agregando diseño usando CSS

--- a/Acercade.html
+++ b/Acercade.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Acerca</title>
 </head>
 <body>
-    <img src="imagenc.png" style="position:absolute;top:0px;right:40px;" width="200" height="200">
-    <p style="font-family:verdana;font-size:200%;color:rgb(17, 167, 80);">Información de Contacto</p> 
-    <a href="ActividadPagina.html">Home</a>
-    <a href="Estudiante.html">Estudiante</a>
-    <a href="Administrador.html">Administrador</a>
-    <a href="Acercade.html">Acerca de</a><br><br>
+    <img src="imagenes/imagenc.png" style="position:absolute;top:0px;right:40px;" width="200" height="200">
+    <h1>Información de Contacto</h1> 
+    <div>
+        <a href="ActividadPagina.html">Home</a>
+        <a href="Estudiante.html">Estudiante</a>
+        <a href="Administrador.html">Administrador</a>
+        <a href="Acercade.html">Acerca de</a>
+        </div><br><br>
 
-    <center><img src="Contacto.png" width="500" height="200"></center>
-    <center><p style="font-family:Verdana, Geneva, Tahoma, sans-serif;font-size:200%;color:rgb(145, 60, 11);">7760-4879 / 7760-4356</p></center>
+    <center><img src="imagenes/Contacto.png" width="500" height="200"></center>
+
+    <p>7760-4879 / 7760-4356</p>
 
 </body>
 </html>
