--- a/ActividadPagina.html
+++ b/ActividadPagina.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Colegio</title>
 </head>
 
 <body>
-    <img src="imagenc.png" style="position:absolute;top:0px;right:40px;" width="200" height="200">
-    <p style="font-family:verdana;font-size:200%;color:blue;">Bienvenidos</p>  
+    <img src="imagenes/imagenc.png" style="position:absolute;top:0px;right:40px;" width="200" height="200">
+    <h1>Bienvenidos</h1>  
+    <div>
     <a href="ActividadPagina.html">Home</a>
     <a href="Estudiante.html">Estudiante</a>
     <a href="Administrador.html">Administrador</a>
     <a href="Acercade.html">Acerca de</a>
+    </div>
 
-    <center><p style="font-family:cursive;font-size:400%;color:rgb(5, 5, 48);">CONOCERÉIS LA VERDAD Y LA VERDAD OS HARÁ LIBRES</p></center>
-    <p align="right" style="font-family:cursive;font-size:100%;color:rgb(5, 5, 48);">JUAN 8:32</p>
+    <p class="mensaje">CONOCERÉIS LA VERDAD Y LA VERDAD OS HARÁ LIBRES</p>
+    <p class="cita">JUAN 8:32</p>
     
 </body>
 </html>
