--- a/Administrador.html
+++ b/Administrador.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Administrador</title>
 </head>
 <body>
-    <img src="imagenc.png" style="position:absolute;top:0px;right:40px;" width="200" height="200">
-    <p style="font-family:verdana;font-size:200%;color:rgb(209, 82, 32);">Lista de Administradores</p> 
-    <a href="ActividadPagina.html">Home</a>
-    <a href="Estudiante.html">Estudiante</a>
-    <a href="Administrador.html">Administrador</a>
-    <a href="Acercade.html">Acerca de</a><br><br>
+    <img src="imagenes/imagenc.png" style="position:absolute;top:0px;right:40px;" width="200" height="200">
+    <h1>Lista de Administradores</h1> 
+    <div>
+      <a href="ActividadPagina.html">Home</a>
+      <a href="Estudiante.html">Estudiante</a>
+      <a href="Administrador.html">Administrador</a>
+      <a href="Acercade.html">Acerca de</a>
+      </div><br><br>
 
-    <center><table style=font-size:150%;>
+    <table>
         <tr>
           <th scope="col">Código</th>
           <th scope="col">Nombre</th>
@@ -49,6 +52,6 @@
             <td>López</td>
             <td>56778912</td>
           </tr>      
-      </table></center>
+      </table>
 </body>
 </html>
