--- a/Acercade.html
+++ b/Acercade.html
@@ -5,21 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
+    <link  href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <title>Acerca</title>
 </head>
 <body>
-    <img src="imagenes/imagenc.png" style="position:absolute;top:0px;right:40px;" width="200" height="200">
-    <h1>Información de Contacto</h1> 
-    <div>
-        <a href="ActividadPagina.html">Home</a>
-        <a href="Estudiante.html">Estudiante</a>
-        <a href="Administrador.html">Administrador</a>
-        <a href="Acercade.html">Acerca de</a>
-        </div><br><br>
+    <nav class="navbar navbar-expand-lg bg-dark">
+        <img src="imagenes/imagenc.png" alt="" width="80" height="58" class="d-inline-block align-text-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><h1>Colegio "AMIGOS"</h1></a>         
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="ActividadPagina.html" style="color: aliceblue;">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Estudiante.html" style="color: aliceblue;">Estudiantes</a>  
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Administrador.html" style="color: aliceblue;">Administradores</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Acercade.html" style="color: aliceblue;">Acerca de</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
-    <center><img src="imagenes/Contacto.png" width="500" height="200"></center>
-
-    <p>7760-4879 / 7760-4356</p>
+      <div class="contenedor2 row row-cols-2 row-cols-md-4 g-2 mt-4">
+        <div class="col">
+          <div class="card ttext-bg-light border-danger">
+            <div class="card-body">
+              <h5 class="card-title">UBICACION</h5>
+              <p class="card-text">3 calle 4-20 Zona 4, San Marcos, San Marcos</p>
+              <a href="https://www.google.es/maps/?hl=es" class="btn btn-dark">Ver Mapa</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card text-bg-light  border-danger">
+            <div class="card-body">
+              <h5 class="card-title">CONTACTO</h5>
+              <p class="card-text">7760-6758   /   colegioAmigos@gmail.com</p>
+              <a href="#" class="btn btn-dark">Llamar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card text-bg-light  border-danger">
+            <div class="card-body">
+              <h5 class="card-title">COLEGIATURA</h5>
+              <p class="card-text">Pagos Mensuales y Anuales</p>
+              <a href="#" class="btn btn-dark">Ver tarifas</a>
+            </div>
+          </div>
+        </div>
+      </div>
 
 </body>
 </html>
