--- a/Estudiante.html
+++ b/Estudiante.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
-    <link  href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <title>Estudiante</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/estilos.css">
+  <script src="http://code.jquery.com/jquery.js"></script>
+  <script type="text/javascript" src="js/funciones.js"></script>
+  <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <title>Estudiante</title>
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg bg-dark">
     <img src="imagenes/imagenc.png" alt="" width="80" height="58" class="d-inline-block align-text-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><h1>Colegio "AMIGOS"</h1></a>         
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="#">
+        <h1>Colegio "AMIGOS"</h1>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="ActividadPagina.html" style="color: aliceblue;">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="ActividadPagina.html"
+              style="color: aliceblue;">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Estudiante.html" style="color: aliceblue;">Estudiantes</a>  
+            <a class="nav-link" href="Estudiante.html" style="color: aliceblue;">Estudiantes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Administrador.html" style="color: aliceblue;">Administradores</a>
@@ -35,48 +43,116 @@
     </div>
   </nav>
 
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-          <th scope="col">Carnet</th>
-          <th scope="col">Nombre</th>
-          <th scope="col">Apellido</th>
-          <th scope="col">Grado</th>
-      </tr>
-    </thead>
-    <tbody class="table-group-divider">
-      <tr>
-        <th scope="row">1</th>
-        <td>5678</td>
-        <td>Pedro</td>
-        <td>Gomez</td>
-        <td>Segundo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>2344</td>
-        <td>Luis</td>
-        <td>Ramirez</td>
-        <td>Tercero</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>4453</td>
-        <td>Sonia</td>
-        <td>Orozco</td>
-        <td>Primero</td>
-      </tr>
-      <tr>
-        <th scope="row">4</th>
-        <td>1221</td>
-        <td>Gabriela</td>
-        <td>Ortiz</td>
-        <td>Segundo</td>
-      </tr>  
-    </tbody>
-  </table>
 
-  
+
+  <div class="container" id="form">
+    <br>
+    <h2>Agregar Alumno</h2>
+
+    <form id="formularioE">
+      <br>
+      <input class="form-control mb-2" placeholder="Carnet" type="text" name="carnet" id="carnet">
+      <br>
+      <input class="form-control mb-2" placeholder="Nombre" type="text" name="nombre" id="nombre">
+      <br>
+      <input class="form-control mb-2" placeholder="Apellido" type="text" name="apellido" id="apellido">
+      <br>
+      <input class="form-control mb-2" placeholder="Grado" type="text" name="grado" id="grado">
+      <br>
+      <input class="form-control mb-2" placeholder="Curso" type="text" name="curso" id="curso">
+      <br>
+      <br>
+      <button class="btn btn-dark me-md-2" type="button" onclick="getDataEstudiantes()">Guardar</button>
+    </form>
+  </div>
+
+  <br>
+
+  <div class="w3-col s4" id="formularioTablas">
+    <table class="table table-bordered" id="myTableEstudiante">
+
+      <tr class="w3-blue">
+        <th nowrap>CARNET</th>
+        <th nowrap>NOMBRE</th>
+        <th nowrap>APELLIDO</th>
+        <th nowrap>GRADO</th>
+        <th nowrap>CURSO</th>
+      </tr>
+
+      <tr>
+        <td>001</td>
+        <td>Luciano</td>
+        <td>Barrios</td>
+        <td>Primero</td>
+        <td>Sociales</td>
+      </tr>
+      <tr>
+        <td>002</td>
+        <td>Mariana</td>
+        <td>de Leon</td>
+        <td>Primero</td>
+        <td>Matematica</td>
+      </tr>
+      <tr>
+        <td>003</td>
+        <td>Antonio</td>
+        <td>Gonzales</td>
+        <td>Primero</td>
+        <td>Lenguaje</td>
+      </tr>
+      <tr>
+        <td>004</td>
+        <td>Fernanda</td>
+        <td>Morales</td>
+        <td>Primero</td>
+        <td>Sociales</td>
+      </tr>
+
+    </table>
+  </div>
+
+  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    <button id="btnAgregarE" class="btn btn-dark me-md-2" type="button">Agregar</button>
+    <button id="btnListarE" class="btn btn-dark me-md-2" type="button">Listar</button>
+    <button id="btnPromedio" type="button" class="btn btn-outline-danger me-md-2">PROMEDIO</button>
+  </div>
+
+
+  <div class="col-xs-6" id="formularioPromedio">
+    <h2>PROMEDIO DE ESTUDIANTES</h2>
+    <h2>Ingrese Notas</h2>
+    <form>
+      <div class="form-group">
+        <br>
+        <label for="valorA">Luciano Barrios </label>
+        <input type="text" name="valorA" id="valorA" class="form-control-auto mb-2" /><br>
+        <label for="valorb">Mariana de Leon</label>
+        <input type="text" name="valorB" id="valorB" class="form-control-auto mb-2" /><br>
+        <label for="valorb">Antonio Gonzales </label>
+        <input type="text" name="valorC" id="valorC" class="form-control-auto mb-2" /><br>
+        <label for="valorb">Fernanda Morales</label>
+        <input type="text" name="valorD" id="valorD" class="form-control-auto mb-2" /><br>
+      </div>
+    </form>
+    <button id="calcula" class="btn btn-danger me-md-2" onclick="ObtenerPromedio()">Calcular</button>
+    <br>
+    <br>
+    <br>
+    <h3>Promedio Total: </h3>
+    <h6 id="promedio"></h6>
+    <br>
+    <h3>Total de Alumnos Aprobados: </h3>
+    <h6 id="aprobadosT"></h6>
+    <br>
+    <h3>Total de Alumnos Reprobados</h3>
+    <h6 id="reprobadosT"></h6>
+  </div>
+
+  </div>
+
+  </div>
+
+
 </body>
+
 </html>
